Fixed bug #37262 (var_export() does not escape \0 character).